# NTI-RISP

./: .gitignore  404.html  CITATION.cff  README.en.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mkdocs.yml
assets/css/: style.css
assets/javascripts/: bundle.50899def.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.f55a23d4.min.js
docs/: examples.md  faq.json  faq.md  index.md  validation.md
docs/adoc/: README.md
docs/img/: dge_shacl.en.drawio  dge_shacl.es.drawio
examples/: index.html
examples/rdf/: E_NTI-RISP_Catalog.rdf  NTI-RISP_Catalog.rdf  NTI-RISP_Dataset.rdf  NTI-RISP_Distribution.rdf  NTI-RISP_Plantilla-AnnexoVI.rdf  NTI-RISP_Plantilla-AnnexoVI_pag.rdf
examples/ttl/: E_NTI-RISP_Catalog.ttl  NTI-RISP_Catalog.ttl  NTI-RISP_Dataset.ttl  NTI-RISP_Distribution.ttl  NTI-RISP_Plantilla-AnnexoVI.ttl  NTI-RISP_Plantilla-AnnexoVI_pag.ttl
faq/: index.html
img/: dge_shacl.en.drawio  dge_shacl.es.drawio
overrides/: main.html
overrides/dcatapes/: codeblock_enhancement.html  conventions_header.html  header_warning.html  index_header.html
overrides/partials/: header.html
refs/dev/: mkdocs.md  versioning.md
refs/docs/: abbreviations.md
search/: search_index.json
shacl/: README.md
shacl/1.0.0/: nti-risp_catalog_shape.ttl  nti-risp_common_shapes.ttl  nti-risp_dataset_shape.ttl  nti-risp_distribution_shape.ttl  nti-risp_vocabularies.shape.ttl
tools/mkdocs-hooks/: dcat_ap_es.py
validación/: index.html
validation/: index.html
(+17 files in other folders)
