[project]
name = "NTI-RISP"
version = "1.0.0"
keywords = ["open-data", "spain", "dcat", "nti-risp", "application-profile", "data-portals", "data-specification"]
description = "Guía para la implementación de la NTI-RISP"
readme = "README.md"
license = {text = "CC-BY-4.0"}
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML"
]

authors = [
    {name = "mjanez", email = "96422458+mjanez@users.noreply.github.com."},
    {name = "Admindatosgobes", email = "contacto@datos.gob.es"}
]

dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material[imaging]==9.7.0",
    "mkdocs-ivory==0.4.6",
    "pymdown-extensions==10.18",
    "mkdocs-enumerate-headings-plugin==0.6.2",
    "mike==2.1.3",
    "mkdocs-drawio==1.12.1",
    "mkdocstrings-python==1.18.2",
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocs-git-committers-plugin-2==2.5.0",
    "mdx_truly_sane_lists==1.3",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-meta-descriptions-plugin==4.1.0",
    "mkdocs-static-i18n==1.3.0"
]

requires-python = ">=3.9,<4"

[tool.pdm]
distribution = false

[project.urls]
"Bug Tracker" = "https://github.com/datosgobes/NTI-RISP/issues"
repository = "https://github.com/datosgobes/NTI-RISP"